<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.angcyo.rbarscan.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/barEditViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/barEditView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/bar_code_tip"
                android:inputType="none"
                android:singleLine="true"
                android:text="@string/click_to_scan_bar" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dataEditView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data1_hint"
                android:inputType="textVisiblePassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dataEditView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data2_hint"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dataEditView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data3_hint"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dataEditView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data4_hint"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dataEditView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/now_time_hint"
                android:inputType="none"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/appendButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/append"
                app:layout_widthPercent="33%w" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_widthPercent="33%w" />

            <Button
                android:id="@+id/timeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/now_time"
                app:layout_widthPercent="33%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/filePathEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/save_to_path_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
